--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -1,12 +1,13 @@
-name: Appimage JDownloader2
+name: Appimage JDownloader2 (test)
 concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
 
 on:
-  schedule:
-    - cron: "0 7 1/7 * *"
   workflow_dispatch: {}
+  push:
+    paths:
+      - '**'
 
 jobs:
   build:
@@ -15,19 +16,19 @@ jobs:
     container:
       image: ghcr.io/pkgforge-dev/archlinux:latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: chmod +x ./get-dependencies.sh && ./get-dependencies.sh
+      - name: Install dependencies
+        run: chmod +x get-dependencies.sh && ./get-dependencies.sh
 
-    - name: Make AppImage
-      run: chmod +x ./jdownloader2-appimage.sh && ./jdownloader2-appimage.sh
+      - name: Make AppImage
+        run: chmod +x jdownloader2-appimage.sh && ./jdownloader2-appimage.sh
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4.6.2
-      with:
-        name: AppImage-x86_64
-        path: dist
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: AppImage-x86_64-test
+          path: dist
 
   release:
     if: ${{ github.ref_name == 'main' }}
